--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Pramod</h1>
     <h1>Vishal</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam assumenda impedit consequuntur totam sequi voluptatum fugit quas nulla deleniti maxime!</p>
 
     <p>paragraph</p>
 </body>
